Fix jumping icons in header

--- a/common/common.scss
+++ b/common/common.scss
@@ -178,7 +178,7 @@ p {
 }
 
 #main .banner-box {
-    margin-top:62px;
+    margin-top:60px;
 }
 
 .banner-box .row {
@@ -1438,4 +1438,11 @@ pre code {
 
 .header-dropdown-toggle.hamburger-dropdown .d-icon {
     display: none;
+}
+
+#search-button,
+#search-button:hover,
+#toggle-hamburger-menu,
+#toggle-hamburger-menu:hover {
+    border: none
 }
